# greenspectors

./: BASF.txt  README.md  requirements.txt  setup.cfg
.streamlit/: config.toml
TF-IDF/: TF-IDF.py  important_keywords.csv  latest_report_highlights_top10_terms_v2.csv  latest_report_highlights_top_10_terms_per_doc_v2.csv  split_reports.py  sustainability_goals_top10_terms_v2.csv  sustainability_goals_top_10_terms_per_doc_v2.csv  tf-idf_v2.py  top10_terms_v2.csv  top_10_terms_per_doc_v2.csv
notebooks/: 00_sample_notebook.ipynb  01_sentiment_analysis_models.ipynb  02_twitter_archives_filtering.ipynb  03_data_loader.ipynb  04_companies_clustering.ipynb  04_labeled_data.ipynb  tweets_sentiment_analysis.ipynb
rating/: Numeric Rating - Sheet1.csv  clustering_pca_results.csv  companies_clustered_by_rating.csv
scripts/: dashboard.py  scrape_twitter_archive.py
src/greenspectors/: env.py
test/: test_example.py
txt_report/: Amazon.txt  Apple.txt  BAC.txt  Blackrock.txt  Boeing.txt  Chevron.txt  Cisco.txt  Exxon.txt  Facebook.txt  Ford.txt  General Motors.txt  Google.txt  Honeywell.txt  JPMorgan.txt  Jetblue.txt  JohnsonJohnson.txt  Mastercard.txt  McD.txt  Microsoft.txt  MorganStanley.txt  Oracle.txt  Pepsico.txt  Samsung.txt  Siemens.txt  TDBank.txt  Unilever.txt  Visa.txt  WaltDisney.txt  WellsFargo.txt  description.md
txt_report/latest_report_highlights/: Amazon.txt  Apple.txt  BAC.txt  BASF.txt  Blackrock.txt  Boeing.txt  Chevron.txt  Cisco.txt  Exxon.txt  Facebook.txt  Ford.txt  General Motors.txt  Google.txt  Honeywell.txt  JPMorgan.txt  Jetblue.txt  JohnsonJohnson.txt  Mastercard.txt  McD.txt  Microsoft.txt  MorganStanley.txt  Oracle.txt  Pepsico.txt  Samsung.txt  Siemens.txt  TDBank.txt  Unilever.txt  Visa.txt  WaltDisney.txt  (+1 more)
(+37 files in other folders)
