[metadata]
name = greenspectors
version = 0.0.1
author = Tobias Kirschstein, Dmytro Povaliaiev, Tashko Pavlov, Carmen Nadine, Ivan Hartono
author_email = tobias.kirschstein@gmail.com
description = The Greenspectors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tobias-kirschstein/greenspectors
project_urls =
    # Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    # License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    jupyterlab~=3.2.0
    ipywidgets~=7.6.5
    flair~=0.9
    numpy~=1.21.2
    pandas~=1.3.3
    scikit-learn~=1.0
    altair~=4.1.0
    streamlit~=1.0.0

[options.packages.find]
where=src
